<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_low"
        android:title="@string/priority_low"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_medium"
        android:title="@string/priority_medium"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_high"
        android:title="@string/priority_high"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_critical"
        android:title="@string/priority_critical"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_not_decided"
        android:title="@string/priority_not_decided"
        app:showAsAction="never"/>

</menu>