<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.friendly.fragment.ConversationFragment"
            android:label="@string/title_chats"
            tools:layout="@layout/fragment_conversation" />
    <fragment
            android:id="@+id/navigation_nearby"
            android:name="com.friendly.fragment.NearbyFragment"
            android:label="@string/title_contacts"
            tools:layout="@layout/fragment_nearby" />

    <fragment
            android:id="@+id/navigation_task"
            android:name="com.friendly.fragment.TaskListFragment"
            android:label="@string/title_task"
            tools:layout="@layout/fragment_task_list" />

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.friendly.fragment.MoreFragment"
            android:label="@string/title_more"
            tools:layout="@layout/fragment_notifications" />
</navigation>